# django-scaffold

./: .env.sample  .gitignore  .pre-commit-config-sample.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
scaffold/: settings.py  urls.py  wsgi.py
scripts/: rename_project.sh
src/: manage.py  pyproject.toml  pytest.ini
src/scaffold/: asgi.py  settings.py  urls.py  wsgi.py
