[tool.poetry]
name = "scaffold"
version = "0.1.0"
description = ""
authors = ["Jose Enrique Narvaez <jenarvaezg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-rest-framework = "^0.1.0"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.6"
django-extensions = "^3.1.1"
ipython = "^7.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
mypy = "^0.812"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
# TODO https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-type-hints-for-third-party-library
ignore_missing_imports = "True"
